--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,10 @@
 button{
   @apply px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:ring focus:ring-blue-300 active:bg-blue-800 text-sm 
 }
+.trashBtn{
+  @apply bg-red-400 hover:bg-red-500 text-white font-bold py-2 px-4 rounded
+}
+.editBtn{
+  @apply bg-yellow-300  hover:bg-yellow-400 text-white font-bold py-2 px-4 rounded
+}
 
