--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,15 @@ button{
 .editBtn{
   @apply bg-yellow-300  hover:bg-yellow-400 text-white font-bold py-2 px-4 rounded
 }
-
+input,textarea{
+  @apply p-2 w-full rounded-md border border-gray-300 focus:outline-none focus:ring focus:ring-indigo-200
+}
+label{
+  @apply block text-sm font-medium text-gray-700
+}
+.errorMessage{
+  @apply text-red-400 text-xs font-light
+}
+.submit{
+  @apply relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-200
+}
