--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-button{
+.btn{
   @apply px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:ring focus:ring-blue-300 active:bg-blue-800 text-sm 
 }
 .trashBtn{
@@ -22,4 +22,7 @@ label{
 }
 .submit{
   @apply relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring focus:ring-indigo-200
+}
+body{
+  @apply bg-[#f7f2ef]
 }
