--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,17 @@ label{
 body{
   @apply bg-[#fcfaf9]
 }
+.limitedLines {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Number of lines to display */
+  -webkit-box-orient: vertical;
+}
+.nameLines {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* Number of lines to display */
+  -webkit-box-orient: vertical;
+}
