--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,74 @@ body{
   -webkit-box-orient: vertical;
 }
 
+.custom-select-container {
+  position: relative;
+  width: 200px; /* Adjust as needed */
+}
 
+/* CustomSelect.css */
+.custom-select-container {
+  position: relative;
+  width: 200px;
+}
+
+.custom-select {
+  appearance: none;
+  padding: 8px;
+  font-size: 16px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  transform-origin: bottom; /* Set the transform-origin to bottom */
+}
+
+.custom-select:hover {
+  border-color: #aaa;
+}
+
+.custom-select:focus {
+  outline: none;
+  border-color: #4a90e2;
+  box-shadow: 0 0 5px rgba(74, 144, 226, 0.7);
+}
+
+/* DropdownMenu.css */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.selected-option {
+  padding: 10px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  width: 200px;
+}
+
+.options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.option {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+  option:hover {
+    background-color: #f0f0f0;
+  }
 
 
 
